@@ -40,6 +40,7 @@ Pragma: no-cache
 Accept: */*
 Content-Length: 45
 Content-Type: application/x-www-form-urlencoded
+Expect: 100-continue
 
 this is what we post to the silly web server
 </protocol>
