@@ -31,6 +31,7 @@ Pragma: no-cache
 Accept: */*
 Content-Length: 1
 Content-Type: application/x-www-form-urlencoded
+Expect: 100-continue
 
 </protocol>
 # 42 - aborted by callback
