@@ -41,6 +41,7 @@ Pragma: no-cache
 Accept: */*
 Content-Length: 0
 Content-Type: application/x-www-form-urlencoded
+Expect: 100-continue
 
 </protocol>
 </verify>
